# betula

./: .gitignore  ACTIVE_MANAGEMENT_IMPLEMENTATION.md  AGENTS.md  Cargo.toml  PROJECT-STATUS.md  README.md  add_active_management.py  check-env.cmd  start-backend.cmd
docs/: APP_RS_CLEANUP_COMPLETED.md  CARD_API_UPDATE.md  CARD_DETAIL_MODAL_FINAL.md  CARD_DETAIL_MODAL_IMPLEMENTATION.md  CODE_STRUCTURE_ANALYSIS.md  DYNAMIC_TAG_MANAGEMENT_FINAL.md  FIX_USERID.md  MODAL_DEBUG_STATUS.md  REFACTOR_COMPLETED.md  REFACTOR_PLAN.md  TAG_MANAGEMENT_IMPLEMENTATION.md  TAG_SELECTION_IMPLEMENTATION.md  TEXT_INPUT_FIX.md  TODO_MANAGEMENT_IMPLEMENTATION.md  app_structure.md  component_refactoring.md  debug_modal_issue.md  description_edit_feature.md  modal_fix_complete.md  modal_layout.md  portallist_migration.md  portallist_migration_complete.md  refactoring_summary.md  start-frontend.cmd  start-project.cmd  tag_list_fix.md  tag_loading_flow.md
kankan/: pom.xml
kankan/data/: kankan.mv.db  kankan.trace.db
kankan/src/main/java/com/roy/kankan/: KankanApplication.java
kankan/src/main/java/com/roy/kankan/command/: CreateTagCommand.java
kankan/src/main/resources/: application.properties  data.sql
kankan/src/test/java/com/roy/kankan/: KankanApplicationTests.java
src/: app.rs  app.rs.backup  app.rs.tmp  app_active_methods.rs.tmp  design.rs  lib.rs  main.rs
src/components/: card_item.rs  card_list.rs  card_modal.rs  card_tag.rs  image_grid.rs  image_item.rs  image_row.rs  mod.rs  space.rs
src/models/: dto.rs  state.rs
src/services/: api.rs
(+18 files in other folders)
