[package]
name = "betula"
version = "0.0.1"
authors = ["RoyHe roooyHe@163.com"]
edition = "2024"
description = "Makepad simple example"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "EVyKRfOGV339Re5CS45PMHHxw_M="

[dependencies]
makepad-widgets = "1.0.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


